fixed navbar overlap

--- a/public/styles/now.css
+++ b/public/styles/now.css
@@ -11,6 +11,7 @@
   padding-top: 20px;
   padding-bottom: 8px;
   font-size: 18px;
+  margin-top: 25px;
   top: 40px;
   font-family: 'Source Sans Pro', sans-serif;
 }
@@ -256,13 +257,13 @@
 /* now */
 .user-post {
   border: none;
-  background-color: #717882;
+  background-color: #b3cbc7a8;
   color: white;
   padding: 5px;
   margin-bottom: 30px;
   text-align: center;
   max-width: 300px;
-  min-height: 25vh;
+  min-height: 20vh;
   width: 70vw;
   display: flex;
   flex-direction: column;
@@ -296,6 +297,7 @@
   overflow-y: auto;
   display: flex;
   flex-direction: column;
+  margin-top: 20px;
 }
 
 .user-post-list > div {
